--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="card-white" id="introduction">
           <h1>Hello, I'm Valentin </h1>
-       	  <img src="profile.jpeg" class="img-circle" width="100px" alt="Renou Valentin">
+       	  <img src="Profile.jpeg" class="img-circle" width="100px" alt="Renou Valentin">
      	 	  <p>
       	   I love coding now, but also play video games and play volley ball. I follow the "Le Wagon" web development to create my profile and my web site !
      	 	  </p>
